# axis-run

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
axis_run/: __init__.py  compat.py  config.py  env_resolver.py  launcher.py  main.py  master.py  torchrun_shim.py
axis_run/checkpoint/: __init__.py  helper.py
axis_run/diagnosis/: __init__.py  fault_config.py  fault_failover.py
axis_run/progress/: __init__.py  client.py  reporter.py
dlrover/python/common/: constants.py
dlrover/python/elastic_agent/diagnosis/: diagnosis_agent.py
dlrover/python/master/: local_master.py  main.py
dlrover/python/master/diagnosis/: diagnosis_master.py
dlrover/python/master/node/: dist_job_manager.py  job_manager.py  local_job_manager.py
dlrover/python/master/resource/: job.py
dlrover/python/master/stats/: reporter.py
docs/: INTEGRATION_TEST.md
tests/: test_checkpoint_helper.py  test_compat.py  test_env_resolver.py  test_fault_diagnostician.py  test_fault_failover.py  test_launcher.py  test_torchrun_shim.py
